# opus-rs

./: CHANGES.md  Cargo.toml  Makefile  README.md  build.rs  canary.py  prek.toml
.github/workflows/: ci.yml  claude.yml  release.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_decode.rs  fuzz_decode_f32.rs  fuzz_decode_i24.rs  fuzz_decode_sequence.rs  fuzz_encode_decode.rs
issues/: 0002-add-packet-utility-functions.md  0003-add-encoder-decoder-get-ctls.md  0004-add-test-coverage.md  0005-add-fuzzing.md  0006-add-dred-api.md  0007-add-projection-api.md  0008-add-packet-parse-and-lbrr.md  0009-add-pcm-soft-clip.md  0010-add-repacketizer.md  0011-add-packet-pad-unpad.md
issues/closed/: 0001-add-float-encode-decode.md  0002-add-packet-utility-functions.md  0003-add-encoder-decoder-get-ctls.md  0004-add-test-coverage.md  0005-add-fuzzing.md  0006-add-dred-api.md
issues/pending/: 0006-add-dred-api.md
src/: lib.rs
